--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <style></style>
-    </head>
-
-    <body>
-        <p>THOS MOSER</p>
-    </body>
-</html>
+{% extends "base.html" %}
