--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,15 @@
 {% extends "base.html" %}
+
+{% block body %}
+
+
+
+     <div class="scroll-left"><p>NOVUS ORDO SECLORUM</p></div>
+
+
+
+{% end %}
+
+{% block afterbody %}
+
+{% end %}
