--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,19 @@
 
 
 
-     <div class="scroll-left"><p>NOVUS ORDO SECLORUM</p></div>
+     <div class="scroll-left"><p>NOVUS ORDO SECLORUM</p></div><br>
+<div class="hor">
 
-
+    
+<a href="/login"><button><i class="fa fa-sign-in" aria-hidden="true"></i>
+</button></a><br>
+<a href="/signup"><button><i class="fa fa-plus" aria-hidden="true"></i>
+</button></a><br><br>
+    <div id="clock" class="clocker" onload="showTime()">  <br><br>
+        
+</div>
+    <span style="padding: 12px; font-size:34px">Announcements: </span>
+</div>
 
 {% end %}
 
