--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,13 @@
     <label class="label_login">LOGIN:</label><br>
     <input id='u' type="text" placeholder="Username:" name="username" required><br>
     <input id='p' type="password" placeholder="Password:" name="password" required>
-    <input type="submit" style="display:none;" />
+    <input type="submit" style="display:none;" /><br>
+    
 </form>
+<a href="/signup"><button><i class="fa fa-plus" aria-hidden="true"></i>
+</button></a>
+    <a href="/"><button style='margin-top:25%;' ><i class="fa fa-home" aria-hidden="true"></i>
+</button></a>
 </div>
 {% end %}
 
