--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block body %}
-<button onclick="swapStyleSheet('dark')">DARK</button>
+<div class="center">
+    <div class="settings">
+
+<button onclick="swapStyleSheet('dark')">DARK</button><br>
 <button onclick="swapStyleSheet('light')">LIGHT</button>
+</div>
+</div>
 {% end %}
