--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,11 +6,14 @@
 <form id="login" method='post'>
     <label class="label_login">SIGNUP:</label><br>
     <input id='u' type="text" placeholder="Username:" name="username" required><br>
-    <br style='height:8%;'>
-    <input id='p' type="password" placeholder="Password:" name="password" required><br>
+    <input style='margin-top:12%;' id='p' type="password" placeholder="Password:" name="password" required><br>
     <input id='p2' type="password" placeholder="Repeat:" name="password" required>
-    <input type="submit" style="display:none;" />
+    <input type="submit" style="display:none;" /><br>
 </form>
+    <a href="/login"><button><i class="fa fa-sign-in" aria-hidden="true"></i>
+</button></a>
+    <a href="/"><button style='margin-top:25%;' ><i class="fa fa-home" aria-hidden="true"></i>
+</button></a>
 </div>
 {% end %}
 
