--- a/static/style-dark.css
+++ b/static/style-dark.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Open Sans', sans-serif;
     --color-background: #1c1c1f;
     --color-secondary: #d0d0d0;
     --color-tertiary: #efefef;
@@ -6,7 +7,6 @@
     --font-color: #808080;
     --button-hover: #3f3f43;
     --button-basic: #2f2f33;
-    font-family: 'Open Sans', sans-serif;
     color: var(--font-color);
 }
 a {
@@ -22,6 +22,7 @@ button {
 	background-color: var(--button-basic);
 	color: var(--font-color);
 }
+
 button:hover {
 	background: var(--button-hover);
 }
@@ -39,3 +40,7 @@ p {
 .scroll-left {
 	color: var(--font-color);
 }
+.clocker {
+    color:var(--font-color);
+}
+
