--- a/static/style.css
+++ b/static/style.css
@@ -1,57 +1,95 @@
-.center {
+ * {
+     font-family: 'Open Sans', sans-serif;
+}
+ .center {
     text-align: center;
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    height:290px;
+    display:block;
+    /*overflow: auto;*/
+    max-height: 290px;
 }
-
-.label_login{
-    padding:8px;
-    font-size: 28px;
+ .hor {
+     text-align: center;
+     margin: 0;
 }
-p {
-	border-bottom-style: solid;
-	border-width: 1px;
+ button {
+     border: none;
+     border-radius: 2px;
+     cursor: pointer;
+     display: inline-block;
+     font-size: 16px;
+     margin: 5px;
+     padding: 15px 32px;
+     text-align: center;
+     transition-duration: .3s;
+     width: 79px;
+     height:79px 
 }
-textarea:focus, input:focus{
-    outline: none;
+ .label_login{
+     padding:8px;
+     font-size: 28px;
 }
-form input {
-    height: 45px;
-    min-width: 164px !important;
-    max-width: 80% !important;
-    transition: width 0.25s ease-out;
-    border-radius: 5px;
-    border: 0px;
-	margin:8px;
-    font-size: 24px;
-    padding: 0px;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
+ p {
+     border-bottom-style: solid;
+     border-width: 1px;
 }
-@keyframes scroll-left {
-0% {
-	transform:translateX(70%);
+ textarea:focus, input:focus{
+     outline: none;
 }
-100% {
-	transform:translateX(-70%);
+ form input {
+     height: 45px;
+     min-width: 164px !important;
+     max-width: 80% !important;
+     transition: width 0.25s ease-out;
+     border-radius: 5px;
+     border: 0px;
+     margin: 8px;
+     font-size: 24px;
+     padding: 0px;
+     font-family: 'Montserrat', sans-serif;
+     text-align: center;
 }
+ @keyframes scroll-left {
+     0% {
+         transform:translateX(70%);
+    }
+     100% {
+         transform:translateX(-70%);
+    }
 }
-.scroll-left {
-	height: 50px;
-	overflow: hidden;
-	position:relative;
+ .scroll-left {
+     height: 50px;
+     overflow: hidden;
+     position:relative;
+     border-bottom-style: solid;
+     border-width: 1px;
 }
-.scroll-left p {
-    font-size:32px;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	line-height: 50px;
-	text-align: center;
-	transform:translateX(70%);
-	animation: scroll-left 15s linear infinite;
+ .scroll-left p {
+     font-size:32px;
+     position: absolute;
+     width: 100%;
+     height: 100%;
+     margin: 0;
+     line-height: 50px;
+     text-align: center;
+     transform:translateX(70%);
+     animation: scroll-left 15s linear infinite;
+     border-bottom-style: solid;
+     border-width: 1px;
 }
+ span{
+     font-family: 'Open Sans', sans-serif;
+}
+ .settings{
+     font-family: 'Open Sans', sans-serif;
+     .clocker {
+         font-family: 'Open Sans', sans-serif;
+         font-size: 25px;
+         letter-spacing: 7px;
+    }
+    
