--- a/static/style.css
+++ b/static/style.css
@@ -7,12 +7,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    height:290px;
+    transform: translate(-50%, -80%);
+    /*height:160px;*/
+    max-height: 160px;
     display:block;
-    /*overflow: auto;*/
-    max-height: 290px;
-}
+    width:100%;
+    
+ }
  .hor {
      text-align: center;
      margin: 0;
@@ -23,8 +24,8 @@
      cursor: pointer;
      display: inline-block;
      font-size: 16px;
-     margin: 5px;
-     padding: 15px 32px;
+     margin: 5px 5px 5px 5px;
+     padding: 15px;
      text-align: center;
      transition-duration: .3s;
      width: 79px;
@@ -92,4 +93,11 @@
          font-size: 25px;
          letter-spacing: 7px;
     }
-    
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
