Basic user login and signup

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,8 @@
 <form id="login" method='post'>
     <label class="label_login">LOGIN:</label><br>
     <input id='u' type="text" placeholder="Username:" name="username" required><br>
-    <input id='p' type="password" placeholder="Password:" name="password" required>
-    <input type="submit" style="display:none;" /><br>
+    <input id='p' type="password" placeholder="Password:" name="password" required><br>
+    <input type="submit" value="Login"/><br>
 
 </form>
 <a href="/"><button><span class="material-symbols-outlined">
@@ -33,6 +33,6 @@ person_add
         resize();
     }
     resizable(document.getElementById('u'), .8);//14.2);
-    resizable(document.getElementById('p'), .65);//14.2);
+    resizable(document.getElementById('p'), .62);//14.2);
 </script>
 {% end %}
