--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,8 +7,8 @@
     <label class="label_login">SIGN UP:</label><br>
     <input id='u' type="text" placeholder="Username:" name="username" required><br>
     <input style='margin-top:1%;' id='p' type="password" placeholder="Password:" name="password" required><br>
-    <input id='p2' type="password" placeholder="Repeat:" name="password-repeat" required>
-    <input type="submit" style="display:none;" /><br>
+    <input id='p2' type="password" placeholder="Repeat:" name="password-repeat" required><br>
+    <input type="submit" value="Sign Up"/><br>
 </form>
 <a href="/"><button><span class="material-symbols-outlined">
 home
@@ -32,7 +32,7 @@ login
         resize();
     }
     resizable(document.getElementById('u'), .7);//14.2);
-    resizable(document.getElementById('p'), .75);//14.2);
-    resizable(document.getElementById('p2'), .75);//14.2);
+    resizable(document.getElementById('p'), .62);//14.2);
+    resizable(document.getElementById('p2'), .62);//14.2);
 </script>
 {% end %}
