--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,14 @@ login
 <a href="/signup"><button><span class="material-symbols-outlined">
 person_add
 </span>
+</button></a>
+{% block extra_buttons %}{% end %}
+<a href="https://norse.atlassian.net/servicedesk/customer/portal/1" target="_blank"><button><span class="material-symbols-outlined">
+bug_report
+</span>
+</button></a>
 
-</button></a><br><br>
+<br><br>
     <div id="clock" class="clocker" onload="showTime()">  <br><br>
         
 </div>
