--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,9 +5,9 @@
     <span id='error'>{{ message }}</span>
 <form id="login" method='post'>
     <label class="label_login">SIGN UP:</label><br>
-    <input id='u' type="text" placeholder="Username:" name="username" required><br>
-    <input style='margin-top:1%;' id='p' type="password" placeholder="Password:" name="password" required><br>
-    <input id='p2' type="password" placeholder="Repeat:" name="password-repeat" required><br>
+    <input id='u' class="login" type="text" placeholder="Username:" name="username" required><br>
+    <input style='margin-top:1%;' id='p' class="login" type="password" placeholder="Password:" name="password" required><br>
+    <input id='p2' class="login" type="password" placeholder="Repeat:" name="password-repeat" required><br>
     <input type="submit" value="Sign Up"/><br>
 </form>
 <a href="/"><button><span class="material-symbols-outlined">
