--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,8 @@
     <span id='error'>{{ message }}</span>
 <form id="login" method='post'>
     <label class="label_login">LOGIN:</label><br>
-    <input id='u' type="text" placeholder="Username:" name="username" required><br>
-    <input id='p' type="password" placeholder="Password:" name="password" required><br>
+    <input id='u' class="login" type="text" placeholder="Username:" name="username" required><br>
+    <input id='p' class="login" type="password" placeholder="Password:" name="password" required><br>
     <input type="submit" value="Login"/><br>
 
 </form>
