--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <label class="label_login">LOGIN:</label><br>
     <input id='u' class="login" type="text" placeholder="Username:" name="username" required><br>
     <input id='p' class="login" type="password" placeholder="Password:" name="password" required><br>
-    <input type="submit" value="Login"/><br>
+ <button type="submit" name="submit" value="Login" id="submit" >Login</button><br>
 
 </form>
 <a href="/"><button><span class="material-symbols-outlined">
