--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,9 @@ home
 person_add
 </span>
 
-</button></a><br><br></div>
+</button></a><br><br>
+<a href="/login/twitter"><button class="oauth oauth-twitter">Login with Twitter</button></a>
+</div>
 
 
 {% end %}
