slowly refactoring the server

--- a/templates/__oauth_new_account.html
+++ b/templates/__oauth_new_account.html
@@ -11,7 +11,7 @@
 </form>
 
 <br>
-<a href="/signup-twitter"><button class="oauth">I already have an account</button></a>
+<a href="/login-twitter"><button class="oauth">I already have an account</button></a>
 </div>
 
 
